[gd_scene load_steps=5 format=3 uid="uid://d2pi71b6u0y1s"]

[ext_resource type="Script" uid="uid://bdfxq4dbrxi5k" path="res://enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://cupbgooug6316" path="res://icon.svg" id="1_7k104"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2p4"]
size = Vector2(87, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(127.75, 124)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_4gyqm")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.196078, 0.560784, 1)
texture = ExtResource("1_7k104")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_qi2p4")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="DamageCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="DamageCooldownTimer" to="." method="_on_damage_cooldown_timer_timeout"]
